--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Redes sociais</title>
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1> inicio do projeto</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="Redes">
+
+        </section>
+    </main>
     
 </body>
 </html>
