adicionando meus dados

--- a/instagram.html
+++ b/instagram.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/redes.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a>
+    <img src="imagens/www.instagram.com__gustavofernandes_.png" alt="instagram">
+    <a href="https://www.instagram.com/_gustavofernandes/" target="_blank">ACESSE</a>
     
 </body>
 </html>
