--- a/facebook.html
+++ b/facebook.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/redes.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="facebook">
-    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <img src="imagens/www.facebook.com_profile.png" alt="facebook">
+    <a href="https://www.facebook.com/profile.php?id=100022112361258" target="_blank">ACESSE</a>
 
     
 </body>
