--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/redes.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
-    <a href="https://gustavoguanabara.github.io/" target="_blank">ACESSE</a>
+    <img src="imagens/github.com_Gusstavofernandes.png" alt="github">
+    <a href="https://github.com/Gusstavofernandes" target="_blank">ACESSE</a>
 </body>
 </html>
