--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"> seu navegador não é compativel</iframe>
         </section>
         <section id="Redes">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>#/
-            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagran"></a><br>
-            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagran"></a>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
             <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
